# mobot

./: LICENSE  README.md
.github/workflows/: publish_mobot_app_to_playstore.yml  publish_mobot_to_pypi.yml  publish_mobot_utils_to_pypi.yml  test.yml
android/: README.md  build.gradle  privacy_policy.md  settings.gradle
android/app/: build.gradle
android/whatsnew/: whatsnew-en-US
assets/faces/: color.md
assets/icons/: color.md
chassis/: README.md
docs/: README.md
mobot/: .gitignore  README.md  TODO.md  setup.cfg  update_proto.py
mobot-utils/: setup.cfg
mobot/mobot/: __init__.py
mobot/mobot/_proto/: README.md
mobot/mobot/_spine/: connection.py
mobot/mobot/_tests/: README.md  accelerometer_test.py  camera_test.py  chassis_test.py  flashlight_test.py  gyroscope_test.py  magnetometer_test.py  performance_test.py  teleop.py  teleop_with_camera.py
mobot/mobot/brain/: agent.py
mobot/mobot/brain/_assets/: chassis.py  speak.py
mobot/mobot/brain/_assets/abstract/: actuator.py
mobot/mobot/brain/assets/: chassis.py  flashlight.py
mobot/mobot/test/: test_helloworld.py
mobot/mobot/utils/: __init__.py  image_grid.py  joystick.py  terminal.py
mobot/src/mobot/_tests/: accelerometer_test.py  gyroscope_test.py  teleop_with_camera.py
mobot/src/mobot/brain/: _connection.py  agent.py
mobot/test/: fake_spine.py  test_agent.py
proto/: README.md  accelerometer.proto  camera.proto  chassis.proto  common.proto  connection.proto  flashlight.proto  gyroscope.proto  imu.proto  listen.proto  magnetometer.proto  speak.proto  talk.proto
(+86 files in other folders)
