[metadata]
name = mobot
version = 0.1.0
author = Aditya Shriwastava
author_email = adityashriwastava7@gmail.com
description = Turning Mobile Phone into Robot
long_description = Visit [mobotx.github.io](http://mobotx.github.io/) to know more!
long_description_content_type = text/markdown
url = http://mobotx.github.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    grpcio
    grpcio-tools
    numpy
    opencv-python
    matplotlib
    texttable

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mobot_spine = mobot._spine.server:main
    mobot_camera_test = mobot._tests.camera_test:main
    mobot_chassis_test = mobot._tests.chassis_test:main
    mobot_accelerometer_test = mobot._tests.accelerometer_test:main
    mobot_gyroscope_test = mobot._tests.gyroscope_test:main
    mobot_magnetometer_test = mobot._tests.magnetometer_test:main
    mobot_flashlight_test = mobot._tests.flashlight_test:main
    mobot_performance_test = mobot._tests.performance_test:main
    mobot_teleop = mobot._tests.teleop_with_camera:main
